--- a/src/grid_path_searcher/CMakeLists.txt
+++ b/src/grid_path_searcher/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(catkin REQUIRED COMPONENTS
     nav_msgs
     visualization_msgs 
     trajectory_optimization
+    quad_msgs
 )
 
 find_package(Eigen3 REQUIRED)
