--- a/src/plan_manage/CMakeLists.txt
+++ b/src/plan_manage/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(plan_manage)
 set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_BUILD_TYPE "Debug")	
-set(CMAKE_CXX_FLAGS "-g -O0")
+# set(CMAKE_BUILD_TYPE "Debug")	
+# set(CMAKE_CXX_FLAGS "-g -O0")
+
+set(CMAKE_BUILD_TYPE "Release")	
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")
 
 find_package(catkin REQUIRED COMPONENTS
   grid_path_searcher
@@ -10,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
   trajectory_optimization
+  mapping
 )
 
 find_package(Eigen3 REQUIRED)
@@ -31,8 +35,11 @@ include_directories(
 
 file(GLOB SRC_FILES "src/*cpp")
 
+# add_executable ( ${PROJECT_NAME} 
+#                 ${SRC_FILES} )
+
 add_executable ( ${PROJECT_NAME} 
-                ${SRC_FILES} )
+                src/simple_planner_node.cpp )
 
 target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
@@ -40,4 +47,5 @@ target_link_libraries(${PROJECT_NAME}
   ${PCL_INCLUDE_DIRS}
   grid_path_searcher
   trajectory_optimization
+  mapping
 )
