--- a/src/grid_path_searcher/CMakeLists.txt
+++ b/src/grid_path_searcher/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 2.8.3)
 set(CMAKE_CXX_STANDARD 14)
 project(grid_path_searcher)
-set(CMAKE_BUILD_TYPE "Debug")	
-set(CMAKE_CXX_FLAGS "-g -O0")
+# set(CMAKE_BUILD_TYPE "Debug")	
+# set(CMAKE_CXX_FLAGS "-g -O0")
+
+set(CMAKE_BUILD_TYPE "Release")	
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")
 find_package(catkin REQUIRED COMPONENTS 
     roscpp 
     std_msgs
