fix dependencies problems

--- a/src/bf_control/CMakeLists.txt
+++ b/src/bf_control/CMakeLists.txt
@@ -19,7 +19,7 @@ find_package(yaml-cpp REQUIRED)
 
 catkin_package(
   INCLUDE_DIRS include/bf_control
-  CATKIN_DEPENDS geometry_msgs mavros_msgs message_runtime nav_msgs roscpp std_msgs
+  CATKIN_DEPENDS geometry_msgs mavros_msgs message_runtime nav_msgs roscpp std_msgs quad_msgs
 )
 
 file(GLOB SRC_FILES "src/*cpp")
