--- a/src/bf_control/package.xml
+++ b/src/bf_control/package.xml
@@ -63,6 +63,7 @@
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>quad_msgs</build_export_depend>
 
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
